# Phago_Project

./: .gitignore  Cargo.toml  README.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml  python.yml
crates/phago/: Cargo.toml
crates/phago-agents/: Cargo.toml  README.md
crates/phago-agents/src/: ast_digester.rs  code_digester.rs  digester.rs  fitness.rs  genome.rs  lamarckian.rs  lib.rs  prelude.rs  semantic_digester.rs  sentinel.rs  serialize.rs  spawn.rs  synthesizer.rs
crates/phago-agents/tests/: dissolution_tests.rs  symbiosis_tests.rs  transfer_tests.rs
crates/phago-cli/: Cargo.toml  README.md
crates/phago-cli/src/: config.rs  main.rs
crates/phago-cli/src/commands/: cluster.rs  explore.rs  export.rs  ingest.rs  init.rs  mod.rs  query.rs  run.rs  session.rs  stats.rs
crates/phago-core/: Cargo.toml  README.md
crates/phago-core/src/: agent.rs  error.rs  lib.rs  louvain.rs  prelude.rs  semantic.rs  signal.rs  substrate.rs  topology.rs  types.rs
crates/phago-core/src/primitives/: apoptose.rs  digest.rs  dissolve.rs  emerge.rs  mod.rs  negate.rs  sense.rs  stigmerge.rs  symbiose.rs  transfer.rs  wire.rs
crates/phago-distributed/: Cargo.toml
crates/phago-distributed/src/: bench.rs  lib.rs  runner.rs  types.rs
crates/phago-distributed/src/coordinator/: mod.rs  shard_registry.rs  tick_barrier.rs
crates/phago-distributed/src/hashing/: mod.rs
crates/phago-distributed/src/query/: distributed.rs  mod.rs
crates/phago-distributed/src/rpc/: client.rs  messages.rs  mod.rs  protocol.rs  server.rs
crates/phago-distributed/src/shard/: edge_resolver.rs  ghost_cache.rs  mod.rs
crates/phago-distributed/tests/: integration.rs
crates/phago-embeddings/: Cargo.toml  README.md
crates/phago-embeddings/src/: api.rs  chunker.rs  embedder.rs  lib.rs  normalize.rs  onnx.rs  simple.rs
crates/phago-llm/: Cargo.toml  README.md
crates/phago-llm/src/: backend.rs  claude.rs  lib.rs  ollama.rs  openai.rs  prompt.rs  types.rs
crates/phago-mcp/: Cargo.toml
crates/phago-mcp/src/: lib.rs  main.rs  tools.rs  worker.rs
crates/phago-python/: Cargo.toml  README.md  pyproject.toml
crates/phago-python/python/phago/: __init__.py  langchain.py  llamaindex.py
crates/phago-python/src/: lib.rs
crates/phago-rag/: Cargo.toml  README.md
crates/phago-rag/src/: baseline.rs  code_query.rs  counterfactual.rs  hybrid.rs  lib.rs  mcp.rs  prelude.rs  query.rs  scoring.rs
crates/phago-runtime/: Cargo.toml  README.md
crates/phago-runtime/src/: async_runtime.rs  backend.rs  bench.rs  colony.rs  colony_builder.rs  community.rs  corpus.rs  curriculum.rs  diff.rs  export.rs  lib.rs  metrics.rs  prelude.rs  project_context.rs  session.rs  sqlite_topology.rs  stdp.rs  streaming.rs  substrate_impl.rs  topology_impl.rs  training_format.rs  vector_integration.rs
crates/phago-runtime/tests/: benchmarks.rs  louvain_benchmark.rs  phase4_integration.rs  synaptic_pruning.rs
crates/phago-vectors/: Cargo.toml  README.md
crates/phago-vectors/src/: lib.rs  memory.rs  pinecone.rs  qdrant.rs  weaviate.rs
crates/phago-viz/: Cargo.toml  README.md
crates/phago-viz/src/: lib.rs
crates/phago-wasm/: Cargo.toml
crates/phago-wasm/src/: lib.rs
crates/phago-web/: Cargo.toml
crates/phago-web/src/: lib.rs  main.rs  state.rs
crates/phago-web/src/routes/: api.rs  mod.rs  ws.rs
crates/phago-web/static/: index.html
crates/phago/src/: lib.rs
deploy/: README.md  docker-compose.yml
deploy/docker/: Dockerfile
deploy/scripts/: start-cluster.sh
docs/: ABOUT_PHAGO.md  BUILD_PLAN.md  COMPETITIVE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  NEXT_PRIORITIES.md  PRD.md  RALPH_LOOP_PLAN.md  ROADMAP.md  STRATEGIC_SYNTHESIS.md  USE_CASES.md  WHITEPAPER.md
docs/papers/: agent-evolution-explainer.md  agent-evolution-whitepaper.md  agentic-memory-explainer.md  agentic-memory-whitepaper.md  bio-rag-explainer.md  bio-rag-whitepaper.md  kg-training-explainer.md  kg-training-whitepaper.md  phago-whitepaper-v2.md
poc/agent-evolution-demo/: Cargo.toml
poc/agent-evolution-demo/src/: evolution_metrics.rs  main.rs
poc/agentic-memory-demo/: Cargo.toml
poc/agentic-memory-demo/src/: main.rs
poc/bio-rag-demo/: Cargo.toml
poc/bio-rag-demo/data/: queries.json
poc/bio-rag-demo/src/: main.rs
poc/data/corpus/: cell_biology_01.txt  cell_biology_02.txt  cell_biology_03.txt  cell_biology_04.txt  cell_biology_05.txt  cell_biology_06.txt  cell_biology_07.txt  cell_biology_08.txt  cell_biology_09.txt  cell_biology_10.txt  cell_biology_11.txt  cell_biology_12.txt  cell_biology_13.txt  cell_biology_14.txt  cell_biology_15.txt  cell_biology_16.txt  cell_biology_17.txt  cell_biology_18.txt  cell_biology_19.txt  cell_biology_20.txt  cell_biology_21.txt  cell_biology_22.txt  cell_biology_23.txt  cell_biology_24.txt  cell_biology_25.txt  genetics_01.txt  genetics_02.txt  genetics_03.txt  genetics_04.txt  genetics_05.txt  genetics_06.txt  genetics_07.txt  genetics_08.txt  genetics_09.txt  genetics_10.txt  genetics_11.txt  genetics_12.txt  genetics_13.txt  genetics_14.txt  genetics_15.txt  (+60 more)
poc/kg-training-demo/: Cargo.toml
poc/kg-training-demo/src/: main.rs
poc/knowledge-ecosystem/: Cargo.toml
poc/knowledge-ecosystem/src/: main.rs
