[workspace]
resolver = "2"
members = [
    "crates/phago",
    "crates/phago-cli",
    "crates/phago-core",
    "crates/phago-runtime",
    "crates/phago-wasm",
    "crates/phago-agents",
    "crates/phago-viz",
    "crates/phago-rag",
    "crates/phago-embeddings",
    "crates/phago-llm",
    "poc/knowledge-ecosystem",
    "poc/bio-rag-demo",
    "poc/agent-evolution-demo",
    "poc/kg-training-demo",
    "poc/agentic-memory-demo",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Clemens865/Phago_Project"
description = "Self-evolving knowledge substrates through biological computing primitives"
authors = ["Clemens Hoenig"]
keywords = ["knowledge-graph", "hebbian-learning", "rag", "agents", "biological-computing"]
categories = ["science", "data-structures", "algorithms"]

[workspace.dependencies]
phago = { version = "0.2.0", path = "crates/phago" }
phago-core = { version = "0.2.0", path = "crates/phago-core" }
phago-runtime = { version = "0.2.0", path = "crates/phago-runtime" }
phago-wasm = { version = "0.2.0", path = "crates/phago-wasm" }
phago-agents = { version = "0.2.0", path = "crates/phago-agents" }
phago-viz = { version = "0.2.0", path = "crates/phago-viz" }
phago-rag = { version = "0.2.0", path = "crates/phago-rag" }
phago-embeddings = { version = "0.2.0", path = "crates/phago-embeddings" }
phago-llm = { version = "0.2.0", path = "crates/phago-llm" }

uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
