[workspace]
resolver = "2"
members = [
    "crates/phago",
    "crates/phago-cli",
    "crates/phago-core",
    "crates/phago-runtime",
    "crates/phago-wasm",
    "crates/phago-agents",
    "crates/phago-viz",
    "crates/phago-rag",
    "crates/phago-embeddings",
    "crates/phago-llm",
    "crates/phago-web",
    "crates/phago-python",
    "crates/phago-vectors",
    "crates/phago-distributed",
    "crates/phago-mcp",
    "poc/knowledge-ecosystem",
    "poc/bio-rag-demo",
    "poc/agent-evolution-demo",
    "poc/kg-training-demo",
    "poc/agentic-memory-demo",
]

# phago-python must be built with maturin, not cargo build
default-members = [
    "crates/phago",
    "crates/phago-cli",
    "crates/phago-core",
    "crates/phago-runtime",
    "crates/phago-wasm",
    "crates/phago-agents",
    "crates/phago-viz",
    "crates/phago-rag",
    "crates/phago-embeddings",
    "crates/phago-llm",
    "crates/phago-web",
    "crates/phago-vectors",
    "crates/phago-distributed",
    "crates/phago-mcp",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Clemens865/Phago_Project"
description = "Self-evolving knowledge substrates through biological computing primitives"
authors = ["Clemens Hoenig"]
keywords = ["knowledge-graph", "hebbian-learning", "rag", "agents", "biological-computing"]
categories = ["science", "data-structures", "algorithms"]

[workspace.dependencies]
phago = { version = "1.0.0", path = "crates/phago" }
phago-core = { version = "1.0.0", path = "crates/phago-core" }
phago-runtime = { version = "1.0.0", path = "crates/phago-runtime" }
phago-wasm = { version = "1.0.0", path = "crates/phago-wasm" }
phago-agents = { version = "1.0.0", path = "crates/phago-agents" }
phago-viz = { version = "1.0.0", path = "crates/phago-viz" }
phago-rag = { version = "1.0.0", path = "crates/phago-rag" }
phago-embeddings = { version = "1.0.0", path = "crates/phago-embeddings" }
phago-llm = { version = "1.0.0", path = "crates/phago-llm" }
phago-vectors = { version = "1.0.0", path = "crates/phago-vectors" }
phago-distributed = { version = "1.0.0", path = "crates/phago-distributed" }

uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
