[package]
name = "phago-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Phago biological computing framework"
documentation = "https://docs.rs/phago-cli"
readme = "README.md"

[[bin]]
name = "phago"
path = "src/main.rs"

[dependencies]
phago = { workspace = true }
phago-distributed = { workspace = true, optional = true }
phago-runtime = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
colored = "2"
indicatif = "0.17"
anyhow = "1"
dirs = "5"
tokio = { version = "1", features = ["full"], optional = true }
tarpc = { version = "0.34", features = ["tokio1", "serde-transport", "tcp", "serde-transport-bincode"], optional = true }

[features]
default = []
distributed = ["phago-distributed", "phago/distributed", "phago-runtime", "tokio", "tarpc"]
