[package]
name = "phago-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for Phago biological computing primitives"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
