[package]
name = "phago-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Distributed colony implementation for horizontal scaling"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true, features = ["async"] }
phago-rag = { workspace = true }
tarpc = { version = "0.34", features = ["tokio1", "serde-transport", "tcp", "serde-transport-bincode"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = "1.0"
tracing = "0.1"

[[bin]]
name = "phago-bench"
path = "src/bin/bench.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
