[package]
name = "phago-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for Phago biological knowledge graph"
documentation = "https://docs.rs/phago-mcp"

[[bin]]
name = "phago-mcp"
path = "src/main.rs"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-rag = { workspace = true }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
