[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phago"
version = "1.0.0"
description = "Self-evolving knowledge substrates through biological computing primitives"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "../../LICENSE" }
keywords = ["knowledge-graph", "hebbian-learning", "rag", "agents", "biological-computing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
dev = ["pytest>=7.0", "maturin>=1.0"]

[project.urls]
Homepage = "https://github.com/Clemens865/Phago_Project"
Documentation = "https://docs.rs/phago"
Repository = "https://github.com/Clemens865/Phago_Project"
Issues = "https://github.com/Clemens865/Phago_Project/issues"
Changelog = "https://github.com/Clemens865/Phago_Project/releases"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "phago._phago"
