[package]
name = "phago-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Colony management, scheduling, and runtime for Phago biological computing"
documentation = "https://docs.rs/phago-runtime"
readme = "README.md"

[dependencies]
phago-core = { workspace = true }
phago-agents = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
