[package]
name = "phago-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Colony management, scheduling, and runtime for Phago biological computing"
documentation = "https://docs.rs/phago-runtime"
readme = "README.md"

[dependencies]
phago-core = { workspace = true }
phago-agents = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true, optional = true }

# Async runtime support
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
sqlite = ["rusqlite"]
async = ["tokio", "async-trait", "futures"]
