[package]
name = "phago-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Browser-based real-time visualization for Phago colonies"
documentation = "https://docs.rs/phago-viz"
readme = "README.md"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
