[package]
name = "phago-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Web dashboard for Phago colony visualization and interaction"
documentation = "https://docs.rs/phago-web"

[[bin]]
name = "phago-web"
path = "src/main.rs"

[dependencies]
phago = { workspace = true }
phago-runtime = { workspace = true }
phago-core = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
