[package]
name = "phago"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Clemens865/Phago_Project"
description = "Self-evolving knowledge substrates through biological computing primitives"
readme = "../../README.md"
keywords = ["knowledge-graph", "hebbian-learning", "rag", "agents", "biological-computing"]
categories = ["science", "data-structures", "algorithms"]

[dependencies]
phago-core = { path = "../phago-core" }
phago-runtime = { path = "../phago-runtime" }
phago-agents = { path = "../phago-agents" }
phago-rag = { path = "../phago-rag" }

[features]
default = []
# Enable visualization (adds phago-viz dependency)
viz = []
# Enable WASM support (adds phago-wasm dependency)
wasm = []
