[package]
name = "phago"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Self-evolving knowledge substrates through biological computing primitives"
documentation = "https://docs.rs/phago"
readme = "../../README.md"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-rag = { workspace = true }

[features]
default = []
# Enable visualization (adds phago-viz dependency)
viz = []
# Enable WASM support (adds phago-wasm dependency)
wasm = []
