[package]
name = "phago"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Self-evolving knowledge substrates through biological computing primitives"
documentation = "https://docs.rs/phago"
readme = "../../README.md"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-rag = { workspace = true }
phago-embeddings = { workspace = true, optional = true }
phago-llm = { workspace = true, optional = true }
phago-distributed = { workspace = true, optional = true }

[features]
default = []
# Enable visualization (adds phago-viz dependency)
viz = []
# Enable WASM support (adds phago-wasm dependency)
wasm = []
# Enable semantic embeddings support
semantic = ["phago-embeddings", "phago-agents/semantic"]
# Enable LLM integration (Claude, OpenAI, Ollama)
llm = ["phago-llm"]
# LLM with API backends (Claude, OpenAI)
llm-api = ["llm", "phago-llm/api"]
# LLM with local backends (Ollama)
llm-local = ["llm", "phago-llm/local"]
# All LLM backends
llm-full = ["llm", "phago-llm/full"]
# Enable distributed colony support
distributed = ["phago-distributed"]
