[package]
name = "phago-agent-evolution-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent evolution demo: intrinsic selection through apoptosis"

[[bin]]
name = "phago-agent-evolution-demo"
path = "src/main.rs"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-viz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
