[package]
name = "phago-agentic-memory-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agentic memory demo: persistent code knowledge through biological computing"

[[bin]]
name = "phago-agentic-memory-demo"
path = "src/main.rs"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-rag = { workspace = true }
phago-viz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
