[package]
name = "phago-kg-training-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KG-Training demo: Hebbian knowledge graph to curriculum-ordered training data"

[[bin]]
name = "phago-kg-training-demo"
path = "src/main.rs"

[dependencies]
phago-core = { workspace = true }
phago-runtime = { workspace = true }
phago-agents = { workspace = true }
phago-viz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
